# modmail-plugins

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: checks.yml  lint.yml
logviewer/: info.json  logviewer.py  requirements.txt
logviewer/core/: auth.py  formatter.py  handlers.py  models.py  servers.py  types_ext.py
logviewer/static/css/: logstyle.css  materialize.css  style.css
logviewer/templates/: base.html  index.html  logbase.html  loglist.html  navbar.html  not_found.html  pagination.html  unauthorized.html
say/: info.json  say.py
video-preview/: info.json  video-preview.py
