[tool.poetry]
name = "modmail-plugins"
version = "0.1.0"
description = "Raiden's plugins for Python Discord Modmail bot"
authors = ["Raiden Sakura <raiden@project-mei.xyz>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "3.0.3"
aiohttp-session = "2.12.0"
cryptography = "41.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.8"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
